feat(subs): enable update in 3 days